# fco-server

./: .gitignore  fco-server.cabal  stack.yaml
app/: Main.hs
src/Fco/: Server.hs
test/: output.json
