name:                 fco-server
version:              0.1.0.0
synopsis:             fco server modules, providing a REST+JSON/JSON-LD API
description:          Please see README.md
homepage:             http://github.com/cyberconcepts/fco-server
license:              MIT
license-file:         LICENSE
author:               functionalconcepts.org team
maintainer:           team@functionalconcepts.org
copyright:            2016 functionalconcepts.org team
category:             Semantic Web
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Fco.Server
  build-depends:      base >= 4.7 && < 5
                    , aeson >= 0.11
                    , basic-prelude
                    , servant-server
                    , wai
                    , warp
  default-language:   Haskell2010

executable fco-server
  hs-source-dirs:     app
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , fco-server
  default-language:   Haskell2010

test-suite fco-server-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base
                    , fco-server
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/cyberconcepts/fco-server
