name:                 fco-server
version:              0.1.0.2
synopsis:             fco server modules, providing a REST+JSON API
description:          Please see README.md
homepage:             http://github.com/cyberconcepts/fco-server
license:              MIT
license-file:         LICENSE
author:               team@functionalconcepts.org
maintainer:           helmutm@cy55.de
copyright:            2019 team@functionalconcepts.org
category:             Semantic Web
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Fco.Server
  build-depends:      base >= 4.7 && < 5
                    , aeson >= 0.11
                    , basic-prelude
                    , scotty
                    --, wai
                    --, warp
  default-language:   Haskell2010

executable fco-server
  hs-source-dirs:     app
  main-is:            Main.hs
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:      base
                    , fco-server
  default-language:   Haskell2010

test-suite fco-server-test
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:      base
                    , fco-server
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/cyberconcepts/fco-server
